--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "prepublishOnly": "git push origin --follow-tags"
   },
   "devDependencies": {
+    "clock-mock": "^1.0.4",
     "tap": "^16.0.1"
   },
   "engines": {
