--- a/package.json
+++ b/package.json
@@ -23,10 +23,35 @@
     "prepublishOnly": "git push origin --follow-tags"
   },
   "devDependencies": {
-    "clock-mock": "^1.0.4",
-    "tap": "^16.0.1"
+    "@types/node": "^17.0.42",
+    "@types/tap": "^15.0.7",
+    "clock-mock": "^1.0.6",
+    "prettier": "^2.7.0",
+    "tap": "^16.0.1",
+    "ts-node": "^10.8.1"
   },
   "engines": {
     "node": ">=12"
+  },
+  "tap": {
+    "nyc-arg": [
+      "--include=index.js"
+    ],
+    "node-arg": [
+      "--require",
+      "ts-node/register"
+    ],
+    "ts": false
+  },
+  "prettier": {
+    "semi": false,
+    "printWidth": 70,
+    "tabWidth": 2,
+    "useTabs": false,
+    "singleQuote": true,
+    "jsxSingleQuote": false,
+    "bracketSameLine": true,
+    "arrowParens": "avoid",
+    "endOfLine": "lf"
   }
 }
