--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "clock-mock": "^1.0.6",
     "prettier": "^2.7.0",
     "tap": "^16.0.1",
-    "ts-node": "^10.8.1"
+    "ts-node": "^10.8.1",
+    "typescript": "^4.7.3"
   },
   "engines": {
     "node": ">=12"
