--- a/package.json
+++ b/package.json
@@ -2,12 +2,21 @@
   "name": "@isaacs/ttlcache",
   "version": "1.4.1",
   "files": [
-    "index.js",
-    "index.d.ts"
+    "dist"
   ],
-  "main": "index.js",
+  "main": "./dist/commonjs/index.js",
   "exports": {
-    ".": "./index.js"
+    "./package.json": "./package.json",
+    ".": {
+      "import": {
+        "types": "./dist/esm/index.d.ts",
+        "default": "./dist/esm/index.js"
+      },
+      "require": {
+        "types": "./dist/commonjs/index.d.ts",
+        "default": "./dist/commonjs/index.js"
+      }
+    }
   },
   "description": "The time-based use-recency-unaware cousin of [`lru-cache`](http://npm.im/lru-cache)",
   "repository": {
@@ -17,33 +26,34 @@
   "author": "Isaac Z. Schlueter <i@izs.me> (https://izs.me)",
   "license": "ISC",
   "scripts": {
+    "prepare": "tshy",
+    "pretest": "npm run prepare",
+    "presnap": "npm run prepare",
     "test": "tap",
     "snap": "tap",
     "preversion": "npm test",
     "postversion": "npm publish",
-    "prepublishOnly": "git push origin --follow-tags"
+    "prepublishOnly": "git push origin --follow-tags",
+    "format": "prettier --write .",
+    "typedoc": "typedoc --tsconfig ./.tshy/esm.json ./src/*.ts"
+  },
+  "tshy": {
+    "exports": {
+      "./package.json": "./package.json",
+      ".": "./src/index.ts"
+    }
   },
   "devDependencies": {
-    "@types/node": "^17.0.42",
-    "@types/tap": "^15.0.7",
-    "clock-mock": "^1.0.6",
-    "prettier": "^2.7.0",
-    "tap": "^16.0.1",
-    "ts-node": "^10.8.1",
-    "typescript": "^4.7.3"
+    "@tapjs/clock": "^3.0.2",
+    "@types/node": "^24.9.1",
+    "prettier": "^3.6.2",
+    "tap": "^21.1.1",
+    "tshy": "^3.0.3",
+    "typedoc": "^0.28.14",
+    "typescript": "^5.9.3"
   },
   "engines": {
     "node": ">=12"
-  },
-  "tap": {
-    "nyc-arg": [
-      "--include=index.js"
-    ],
-    "node-arg": [
-      "--require",
-      "ts-node/register"
-    ],
-    "ts": false
   },
   "prettier": {
     "semi": false,
@@ -55,5 +65,13 @@
     "bracketSameLine": true,
     "arrowParens": "avoid",
     "endOfLine": "lf"
+  },
+  "type": "module",
+  "types": "./dist/commonjs/index.d.ts",
+  "module": "./dist/esm/index.js",
+  "tap": {
+    "plugin": [
+      "@tapjs/clock"
+    ]
   }
 }
