--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "url": "git+https://github.com/isaacs/ttlcache"
   },
   "author": "Isaac Z. Schlueter <i@izs.me> (https://izs.me)",
-  "license": "ISC",
+  "license": "BlueOak-1.0.0",
   "scripts": {
     "prepare": "tshy",
     "pretest": "npm run prepare",
