--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,18 @@
 name: CI
 
-on: [push, pull_request]
+on:
+  push:
+    branches: ["main"]
+  pull_request_target:
+    paths:
+      - 'src/**'
+      - 'test/**'
+      - '*.json'
+      - '*.js'
+      - '*.ts'
+      - 'lib/**'
+      - 'scripts/**'
+  workflow_dispatch:
 
 jobs:
   build:
@@ -12,6 +24,10 @@ jobs:
           shell: bash
         - os: macos-latest
           shell: bash
+        - os: windows-latest
+          shell: bash
+        - os: windows-latest
+          shell: powershell
       fail-fast: false
 
     runs-on: ${{ matrix.platform.os }}
@@ -24,10 +40,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Use Nodejs ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-          cache: npm
 
       - name: Install dependencies
         run: npm install
